--- a/wtProject/index.html
+++ b/wtProject/index.html
@@ -29,7 +29,7 @@
                 <p class="hero-description">
                     Join our mission to create meaningful change. Every kilometer you run supports critical community initiatives and brings hope to those in need.
                 </p>
-                <a href=".signup/signup.html" class="btn btn-primary">Get Involved</a>
+                <a href="./signup/signup.html" class="btn btn-primary">Get Involved</a>
                 <a href="#features" class="btn btn-secondary">Learn More</a>
             </div>
             <div class="hero-image">
