--- a/wtProject/signup/signup.html
+++ b/wtProject/signup/signup.html
@@ -108,7 +108,7 @@
     
                 <button type="submit" class="submit-btn" onclick="validateForm(event)">
                     <i class="ri-user-add-line"></i>
-                    <a href="./profile/profile.html" style="color: white; text-decoration: none;">Create Account</a>
+                    <a href="../profile/profile.html" style="color: white; text-decoration: none;">Create Account</a>
                 </button>
             </form>
     
